2009-03-03  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/builder.hpp:
	* cpp/include/openclas/segment.hpp：
		Rename segment.hpp to builder.hpp。
		Make all member function static.
		Rename struct Word to WordInformation, and add DictEntry* entry.
		Add create() for create graph based on given text and dictionary
		Rename generate_atoms() to split_atoms().
		Rename generate_offset_array() to create_out_table().
		Rename generate_graph() to create_graph().
		Add create_graphs() for create multiple sub-graph based on the out_table() to increase the performance.
		Add vertex_desc_t property for VertexProperty, so do not need wordlist any more.
	* cpp/src/unit_test/OpenClas_VS2008.vcproj:
	* cpp/src/unit_test/OpenClas_VS2005.vcproj:
	* cpp/src/unit_test/unit_test_builder.hpp:
		Rename unit_test_segment.hpp to unit_test_builder.hpp

2009-03-02  Tao Wang  <dancefire@gmail.com>

	Add License information at the begining of each file in cpp/src/unit_test/*.hpp

2009-03-02  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/k_shortest_path.hpp: Fix bugs in dag_all_paths() and dag_shortest_path().
	* cpp/include/openclas/serialization.hpp: Fix bugs in save_to_file() and load_from_file().
	* cpp/src/unit_test/CMakeLists.txt: Boost_LIBRARIES => Boost_LIBRARY_DIRS.
	* cpp/src/unit_test/unit_test_k_shortest_path.hpp: Change the weights of Graph_single_path.
	* cpp/src/unit_test/unit_test_serialization.hpp:
		Add test_file_existence().
		Improve test_Serialization_ICT_load_from_dct().
	* cpp/src/unit_test/unit_test_utility.hpp: Commented the test cases for GB18030, since it's not working and not used.

2009-02-28  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/serialization.hpp:
	  Fix missing locale_utf8 for Linux.
	  Fix a bug which should read the tag to entry other than dict.
	* cpp/include/openclas/dictionary.hpp:
	  Remove reference for all iterator arguments.

2009-02-22  Tao Wang  <dancefire@gmail.com>
