@@ -1,5 +1,5 @@
 ﻿/*********************************************************************************
-Copyright 2007-2009 Dancefire (dancefire@gmail.com).
+Copyright 2009 Dancefire (dancefire@gmail.com).
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
@@ -25,7 +25,7 @@ OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 SUCH DAMAGE.
 
 
-版权所有 2007-2009 Dancefire (dancefire@gmail.com)。
+版权所有 2009 Dancefire (dancefire@gmail.com)。
 保留所有权利。
 
 在满足下列条件的前提下，允许重新分发修改过或未经修改的，以源代码或已编译形式
@@ -48,22 +48,9 @@ SUCH DAMAGE.
 /*
 *	$Id$
 */
-
 #pragma once
-#ifndef _OPENCLAS_UNIT_TEST_SEGMENT_HPP_
-#define _OPENCLAS_UNIT_TEST_SEGMENT_HPP_
+#ifndef _OPENCLAS_SEGMENT_HPP_
+#define _OPENCLAS_SEGMENT_HPP_
 
-#include <openclas/segment.hpp>
-
-BOOST_AUTO_TEST_SUITE( segment )
-
-//BOOST_AUTO_TEST_CASE( test_get_special_word )
-//{
-//    BOOST_FAIL( "Test is not ready yet" );
-//}
-
-
-BOOST_AUTO_TEST_SUITE_END()
-
-//	_OPENCLAS_UNIT_TEST_SEGMENT_HPP_
+//	 _OPENCLAS_SEGMENT_HPP_
 #endif
