@@ -385,4 +385,5 @@ protected:
 
 BOOST_UTF8_END_NAMESPACE
 
-#endif // BOOST_UTF8_CODECVT_FACET_HPP
+// BOOST_UTF8_CODECVT_FACET_HPP
+#endif
