@@ -65,4 +65,5 @@ BOOST_AUTO_TEST_SUITE( builder )
 
 BOOST_AUTO_TEST_SUITE_END()
 
-#endif //	_OPENCLAS_UNIT_TEST_BUILDER_HPP_
+//	_OPENCLAS_UNIT_TEST_BUILDER_HPP_
+#endif
