@@ -428,4 +428,5 @@ BOOST_AUTO_TEST_CASE( test_Dictionary_tag_transit )
 
 BOOST_AUTO_TEST_SUITE_END()
 
-#endif //	_OPENCLAS_UNIT_TEST_DICTIONARY_HPP_
+//	_OPENCLAS_UNIT_TEST_DICTIONARY_HPP_
+#endif
