@@ -219,4 +219,5 @@ BOOST_AUTO_TEST_CASE( test_Serialization )
 
 BOOST_AUTO_TEST_SUITE_END()
 
-#endif //	_OPENCLAS_UNIT_TEST_SERIALIZATION_HPP_
+//	_OPENCLAS_UNIT_TEST_SERIALIZATION_HPP_
+#endif
