@@ -431,4 +431,5 @@ BOOST_AUTO_TEST_CASE( test_locale_utf8 )
 
 BOOST_AUTO_TEST_SUITE_END()
 
-#endif //	_OPENCLAS_UNIT_TEST_UTILITY_HPP_
+//	_OPENCLAS_UNIT_TEST_UTILITY_HPP_
+#endif
