@@ -146,4 +146,5 @@ BOOST_AUTO_TEST_CASE( test_viterbi_vector )
 
 BOOST_AUTO_TEST_SUITE_END()
 
-#endif //	_OPENCLAS_UNIT_TEST_VITERBI_HPP_
+//	_OPENCLAS_UNIT_TEST_VITERBI_HPP_
+#endif
