@@ -1,5 +1,11 @@
 2009-03-03  Tao Wang  <dancefire@gmail.com>
 
+	Add cpp/include/openclas/segment.hpp for general segmentation.
+	Add cpp/src/unit_test/unit_test_segment.hpp.
+	Move the comment for include-guard before #endif.
+
+2009-03-03  Tao Wang  <dancefire@gmail.com>
+
 	* cpp/include/openclas/builder.hpp:
 	* cpp/include/openclas/segment.hpp：
 		Rename segment.hpp to builder.hpp。
